# DShowMPEGParse

./: .gitignore  MP3Parse.dsp  MP3Parse.dsw  MP3Parse.opt  MP3Parse.plg  MP3Parse.sln  MP3Parse.vcxproj  MP3Parse.vcxproj.filters  Parser.cpp  Parser.h  README.md  guidmp3p.h  mp3.h  mp3parse.cpp  mp3parse.def  mp3parse.h  my_buffer.h  puller.cpp  puller.h
Debug/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MP3Parse.exp  MP3Parse.lastbuildstate  MP3Parse.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc100.idb  vc60.idb
Release/: CL.read.1.tlog  CL.write.1.tlog  MP3Parse.exp  MP3Parse.lastbuildstate  MP3Parse.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc60.idb
my/Test/build-test_my_buffer-Clang_7-Debug/: .qmake.stash
my/Test/test_my_buffer/: test_my_buffer.pro
my/Tests/build-my_buffer_test-Clang_8-Debug/: CMakeCache.txt  cmake_install.cmake  my_buffer_test.cbp
my/Tests/build-my_buffer_test-Clang_8-Default/: CMakeCache.txt  cmake_install.cmake  my_buffer_test.cbp
my/Tests/build-my_buffer_test-gcc_32-Debug/: CMakeCache.txt  cmake_install.cmake  my_buffer_test.cbp
my/Tests/build-my_buffer_test-gcc_32-Default/: CMakeCache.txt  cmake_install.cmake  my_buffer_test.cbp
my/Tests/my_buffer_test/: CMakeLists.txt  main.cpp
my/Tests/my_buffer_test/buftestvc6/: buftestvc6.dsp  buftestvc6.dsw  buftestvc6.opt  buftestvc6.plg
my/include/: my_buffer.h.old  my_cpp_versions.hpp  my_debug.h  my_membuf.h
(+3 files in other folders)
